@@ -20,6 +20,7 @@
 - Added EventEntry.Notifications. This property (boolean) indicates if an update on an entry should send notifications to the attendees of the 
   Event. 
 - Fixed the gbase project (the NumberFormat.cs file was missing in the project file). 
+- Added a proxy property for the GDataRequestFactory. 
 
 == 1.0.7 ==
 - Added support for published-min/published-max as standard query parameters
